k8s_manifests/apps/base/app_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sharks-app-deploy
  labels:
    app: web-deploy
spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: sharks
        image: ghcr.io/adebisea/app_deployment/sharks-app:latest
        ports:
        - name: sharks-app-metrics
          containerPort: 3000
      imagePullSecrets:
      - name: ghcr-secret
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%

      maxSurge: 25%
