k8s_manifests/apps/base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: sharks-service
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
