k8s_manifests/apps/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-sharks
spec:
  rules:
  # - host: "*.kikslab.com"
    http:
      paths:
      - pathType: Prefix
        path: "/health"
        backend:
          service:
            name: sharks-service
            port:
              number: 80
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: sharks-service
            port:
              number: 80
